--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -5,28 +5,20 @@
 }
 
 html, body {
-  background-color: #313131;
+  background-color: #0D63A5;
   color: #eee;
   font: 16px/1.6rem "Open Sans", sans-serif;
 }
 
-hr {
-  margin: 4rem;
-}
-
 a {
-  color: #C7C6C6;
+  color: #FFD717;
 }
 a:hover {
-  color: #979797;
-}
-
-em, i, b, strong {
-  /* color: $color1L1; */
+  color: #fff1b0;
 }
 
 h1, h1 a, h1 a:hover, h2, h3, h4, .title {
-  color: #C7C6C6;
+  color: #FFD717;
   font-family: "Federo", serif;
   margin: 0.8em 0;
   text-decoration: none;
@@ -42,7 +34,7 @@ h1 {
 }
 
 article {
-  background-color: #696969;
+  background-color: #083358;
   margin: 1em auto;
   max-width: 60em;
   padding: 1em;
@@ -52,7 +44,7 @@ article {
   margin-bottom: 0.5rem;
 }
 .form-group button[type=submit] {
-  background-color: #9E9F9E;
+  background-color: gray;
 }
 .form-group button {
   background-color: white;
@@ -83,7 +75,7 @@ article {
 
 /* HEADER */
 header {
-  background-color: #040303;
+  background-color: #083358;
   position: relative;
 }
 
@@ -149,7 +141,7 @@ nav li {
   width: 50%;
 }
 nav li a {
-  color: #C7C6C6;
+  color: #FFD717;
   display: inline-block;
   font-size: 0.8rem;
   line-height: 0.8rem;
@@ -161,7 +153,7 @@ nav li a {
 }
 nav li a:hover {
   /* background-color: $color1D2; */
-  color: #979797;
+  color: #fff1b0;
   text-decoration: underline;
 }
 
@@ -206,7 +198,7 @@ section {
   width: 100%;
 }
 .gallery img {
-  box-shadow: 3px 3px 10px #313131;
+  box-shadow: 3px 3px 10px #0D63A5;
 }
 .gallery li {
   margin: 1rem 0;
@@ -223,7 +215,7 @@ section {
 }
 .summary-banner h1 {
   bottom: 0;
-  color: #C7C6C6;
+  color: #FFD717;
   display: block;
   left: 0;
   line-height: 1.8rem;
@@ -257,10 +249,9 @@ section.home article h1 {
   padding: 1rem;
   padding-top: 0;
 }
-.details {
-  color: #C7C6C6;
+.summary .details {
+  color: #FFD717;
   font-size: 0.8rem;
-  margin-top: 0.4rem;
 }
 
 .tags {
@@ -332,7 +323,7 @@ section.home article h1 {
 @media only screen and (min-width: 800px) {
   nav {
     display: inline-block;
-    max-width: 36rem;
+    max-width: 30em;
     position: absolute;
     right: 1rem;
     text-align: right;
