Updated the CSS and removed the cover image.

--- a/default.hbs
+++ b/default.hbs
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
 
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700|Ubuntu+Mono:400,700,400italic' rel='stylesheet' type='text/css'>
+
     {{ghost_head}}
 </head>
 <body class="{{body_class}} nav-closed">
@@ -24,7 +26,7 @@
 
     {{{body}}}
 
-    <footer>&copy; {{date format="YYYY"}} {{@blog.title}}. All rights reserved.<br />Proudly published with <a href="https://ghost.org">Ghost</a></footer>
+    <footer>&copy; {{date format="YYYY"}} {{@blog.title}}. All rights reserved.<br />Proudly published with <a href="https://ghost.org">Ghost</a>.</footer>
 
     {{ghost_foot}}
 
