--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,13 +1,7 @@
 {{#foreach posts}}
 <article>
     <h1><a href="{{url}}">{{title}}</a></h1>
-    <div class="details">
-        {{date format="MMMM DD, YYYY"}}
-    </div>
-    {{content}}
-    {{#if tags}}
-    <p><strong>Tags:</strong> {{tags}}</p>
-    {{/if}}
+    <p>{{meta_description}}</p>
 </article>
 {{/foreach}}
 
