--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@
             </div>
             {{content}}
             {{#if tags}}
-            <p><strong>Tags:</strong> {{tags}}</p>
+            <p class="tags"><strong>Tags:</strong> {{tags}}</p>
             {{/if}}
         </article>
     {{/post}}
