--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -5,21 +5,21 @@
 }
 
 html, body {
-  background-color: #0D63A5;
-  color: #eee;
+  background-color: white;
+  color: black;
   font: 16px/1.6rem "Open Sans", sans-serif;
 }
 
 a {
-  color: #FFD717;
+  color: #00ADB5;
 }
 a:hover {
-  color: #fff1b0;
+  color: #00dee8;
 }
 
 h1, h1 a, h1 a:hover, h2, h3, h4, .title {
-  color: #FFD717;
-  font-family: "Federo", serif;
+  color: #00ADB5;
+  font-family: "Ubuntu Mono", serif;
   margin: 0.8em 0;
   text-decoration: none;
 }
@@ -34,10 +34,13 @@ h1 {
 }
 
 article {
-  background-color: #083358;
+  background-color: white;
   margin: 1em auto;
-  max-width: 60em;
-  padding: 1em;
+  max-width: 40rem;
+  padding: 0 1em;
+}
+article ul, article ol {
+  list-style-position: inside;
 }
 
 .form-group {
@@ -75,20 +78,21 @@ article {
 
 /* HEADER */
 header {
-  background-color: #083358;
+  background-color: #393E46;
   position: relative;
 }
 
 .header-content {
   display: block;
   margin: 0 auto;
-  max-width: 60em;
+  max-width: 40rem;
   position: relative;
 }
 
 .branding {
   display: inline-block;
   margin: 1rem;
+  margin-bottom: 0;
 }
 
 .logo {
@@ -102,7 +106,6 @@ header {
   display: inline-block;
   font-size: 2rem;
   margin: 0;
-  margin-left: 0.5rem;
 }
 .title a {
   text-decoration: none;
@@ -117,6 +120,7 @@ header {
 
 nav {
   display: block;
+  margin: 0 1rem;
   position: relative;
 }
 nav ul {
@@ -137,15 +141,13 @@ nav ul {
           justify-content: flex-start;
   list-style-type: none;
 }
-nav li {
-  width: 50%;
-}
 nav li a {
-  color: #FFD717;
+  color: #00ADB5;
   display: inline-block;
-  font-size: 0.8rem;
+  font-size: 1rem;
   line-height: 0.8rem;
-  padding: 0.8rem 0;
+  padding: 1rem 0;
+  padding-right: 1rem;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -153,7 +155,7 @@ nav li a {
 }
 nav li a:hover {
   /* background-color: $color1D2; */
-  color: #fff1b0;
+  color: #00dee8;
   text-decoration: underline;
 }
 
@@ -183,75 +185,28 @@ footer {
 
 img {
   width: 100%;
-  max-width: 960px;
+  max-width: 40rem;
 }
 
 section {
   /* padding: 1em 0; */
   margin: 0 auto;
-  max-width: 60rem;
-}
-
-.gallery {
-  list-style-type: none;
-  margin: 1rem 0;
-  width: 100%;
-}
-.gallery img {
-  box-shadow: 3px 3px 10px #0D63A5;
-}
-.gallery li {
-  margin: 1rem 0;
-}
-
-.summary-banner {
-  background-size: 100% auto;
-  background-position: 0 30%;
-  background-repeat: no-repeat;
-  display: inline-block;
-  height: 20rem;
-  position: relative;
-  width: 100%;
-}
-.summary-banner h1 {
-  bottom: 0;
-  color: #FFD717;
-  display: block;
-  left: 0;
-  line-height: 1.8rem;
-  padding: 1rem;
-  position: absolute;
-  width: 100%;
-}
-.summary-banner h1:hover {
-  text-decoration: underline;
-}
-.summary-banner::before {
-  background-color: rgba(4, 3, 3, 0.9);
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 70%, rgba(4, 3, 3, 0.9) 100%);
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 70%, rgba(4, 3, 3, 0.9) 100%);
-  content: '';
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
+  max-width: 40rem;
 }
 
 section.home article {
-  padding: 0;
+  border-bottom: 1px solid #393E46;
 }
 section.home article h1 {
   margin: 0;
 }
 
-.summary {
-  padding: 1rem;
-  padding-top: 0;
-}
-.summary .details {
-  color: #FFD717;
+.details, .tags {
   font-size: 0.8rem;
+}
+
+.details {
+  color: gray;
 }
 
 .tags {
@@ -262,36 +217,13 @@ section.home article h1 {
   margin: 1em auto;
 }
 
-@media only screen and (min-width: 500px) {
-  nav li {
-    width: 33.3%;
+@media only screen and (min-width: 700px) {
+  .branding, nav {
+    margin-left: 0;
   }
 
-  .gallery {
-    -webkit-box-flex: 1;
-    -webkit-align-content: flex-start;
-        -ms-flex-line-pack: start;
-            align-content: flex-start;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-  .gallery li {
-    margin: 1rem;
-    width: calc(50% - 2rem);
-  }
-}
-@media only screen and (min-width: 700px) {
-  .gallery li {
-    width: calc(33.3% - 2rem);
+  article {
+    padding: 0;
   }
 
   section.home {
@@ -311,6 +243,8 @@ section.home article h1 {
             justify-content: flex-start;
   }
   section.home article {
+    border: 1px solid #393E46;
+    padding: 1rem 2rem;
     width: calc(50% - 1rem);
   }
   section.home article:nth-child(odd) {
@@ -320,43 +254,6 @@ section.home article h1 {
     margin: 1rem 0 1rem 1rem;
   }
 }
-@media only screen and (min-width: 800px) {
-  nav {
-    display: inline-block;
-    max-width: 30em;
-    position: absolute;
-    right: 1rem;
-    text-align: right;
-    top: 0;
-    width: 100%;
-  }
-  nav ul {
-    display: inline-block;
-    margin: 0.5rem 0;
-    width: 100%;
-  }
-  nav li {
-    display: inline-block;
-    margin: 0 0.5rem;
-    width: auto;
-  }
-  nav li:first-child {
-    margin-left: 0;
-  }
-  nav li:last-child {
-    margin-right: 0;
-  }
-}
-@media only screen and (min-width: 62rem) {
-  nav {
-    right: 0;
-  }
-
-  .branding {
-    margin-left: 0;
-  }
-}
-
 nav.pagination {
   display: block;
   max-width: 100%;
