--- a/index.hbs
+++ b/index.hbs
@@ -16,7 +16,7 @@
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
 </header> --}}
 
-<section>
+<section class="home">
 
     {{> "loop"}}
 
